Grid sections styling

--- a/Frontend Mentor/Sunnyside Agency/index.html
+++ b/Frontend Mentor/Sunnyside Agency/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="style.css">
   
   <title>Frontend Mentor | Sunnyside Agency Landing Page</title>
@@ -58,17 +58,24 @@
       </div>
       <a class="learn-more" href="#">Learn more</a>
     </div>
+    
   </div>
 
   <div class="services">
     <div class="service-card graphic-design">
-      <div>Graphic design</div>
-      <div>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</div>
+      <img src="img/mobile/image-graphic-design.jpg" alt="Graphic Design">
+      <div class="service-text">
+        <div class="service">Graphic Design</div>
+        <div class="service-info">Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</div>
+      </div>
     </div>  
 
     <div class="service-card photography">
-      <div>Photography</div>
-      <div>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</div>
+      <img src="img/mobile/image-photography.jpg" alt="Photography">
+      <div class="service-text">
+        <div class="service">Photography</div>
+        <div class="service-info">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</div>
+      </div>
     </div>
   </div>
 
