--- a/Frontend Mentor/Sunnyside Agency/index.html
+++ b/Frontend Mentor/Sunnyside Agency/index.html
@@ -81,26 +81,28 @@
 
   <section class="client-testimonials">
     <h3>Client testimonials</h3>
-
-    <div class="testimonial">
-      <img class="client-avatar" src="img/image-emily.jpg" alt="Client avatar">
-      <div class="testimonial-text">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</div>
-      <div class="client-name">Emily R.</div>
-      <div class="client-occupation">Marketing Director</div>
-    </div>
-
-    <div class="testimonial">
-      <img class="client-avatar" src="img/image-thomas.jpg" alt="Client avatar">
-      <div class="testimonial-text">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</div>
-      <div class="client-name">Thomas S.</div>
-      <div class="client-occupation">Chief Operating Officer</div>
-    </div>
-
-    <div class="testimonial">
-      <img class="client-avatar" src="img/image-jennie.jpg" alt="Client avatar">
-      <div class="testimonial-text">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</div>
-      <div class="client-name">Jennie F.</div>
-      <div class="client-occupation">Business Owner</div>
+    
+    <div class="testimonials-container">
+      <div class="testimonial">
+        <img class="client-avatar" src="img/image-emily.jpg" alt="Client avatar">
+        <div class="testimonial-text">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</div>
+        <div class="client-name">Emily R.</div>
+        <div class="client-occupation">Marketing Director</div>
+      </div>
+  
+      <div class="testimonial">
+        <img class="client-avatar" src="img/image-thomas.jpg" alt="Client avatar">
+        <div class="testimonial-text">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</div>
+        <div class="client-name">Thomas S.</div>
+        <div class="client-occupation">Chief Operating Officer</div>
+      </div>
+  
+      <div class="testimonial">
+        <img class="client-avatar" src="img/image-jennie.jpg" alt="Client avatar">
+        <div class="testimonial-text">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</div>
+        <div class="client-name">Jennie F.</div>
+        <div class="client-occupation">Business Owner</div>
+      </div>
     </div>
   </section>
 
