--- a/Frontend Mentor/Tip Calculator App/index.html
+++ b/Frontend Mentor/Tip Calculator App/index.html
@@ -30,7 +30,7 @@
           <button class="tip-percentage">15%</button>
           <button class="tip-percentage">25%</button>
           <button class="tip-percentage">50%</button>
-          <input class="customTip" type="number" placeholder="Custom">
+          <input id="customTip" type="number" placeholder="Custom">
         </div>
 
         <label for="num-people">Number of People</label>
@@ -38,13 +38,15 @@
       </div>
 
       <div class="calculations">
-        <div total-label>
+        <div class="total-label">
           Tip Amount
+          <br>
           <span>/ person</span>
         </div>
 
-        <div total-label>
+        <div class="total-label">
           Total
+          <br>
           <span>/ person</span>
         </div>
 
@@ -57,7 +59,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/alexvalpeter">Alexandria Peterson</a>.
     </div>
   </footer>
 </body>
