Complete mobile styling

--- a/Frontend Mentor/Tip Calculator App/index.html
+++ b/Frontend Mentor/Tip Calculator App/index.html
@@ -38,16 +38,19 @@
       </div>
 
       <div class="calculations">
-        <div class="total-label">
-          Tip Amount
-          <br>
-          <span>/ person</span>
-        </div>
-
-        <div class="total-label">
-          Total
-          <br>
-          <span>/ person</span>
+        <div class="totals-container">
+          <div class="total-label">
+            Tip Amount
+            <br>
+            <span>/ person</span>
+          </div>
+          <div class="result tip-per-person">$0.00</div>
+          <div class="total-label">
+            Total
+            <br>
+            <span>/ person</span>
+          </div>
+          <div class="result total-per-person">$0.00</div>
         </div>
 
         <input type="reset">
