Fix form reloading

--- a/Frontend Mentor/Tip Calculator App/index.html
+++ b/Frontend Mentor/Tip Calculator App/index.html
@@ -25,16 +25,16 @@
         <label>Select Tip %</label>
 
         <div class="tip-values">
-          <button class="tip-percentage">5%</button>
-          <button class="tip-percentage">10%</button>
-          <button class="tip-percentage">15%</button>
-          <button class="tip-percentage">25%</button>
-          <button class="tip-percentage">50%</button>
+          <button class="tip-percentage" type="button">5%</button>
+          <button class="tip-percentage" type="button">10%</button>
+          <button class="tip-percentage" type="button">15%</button>
+          <button class="tip-percentage" type="button">25%</button>
+          <button class="tip-percentage" type="button">50%</button>
           <input id="custom-tip" type="number" placeholder="Custom" min="0">
         </div>
 
         <label for="num-people">Number of People</label>
-        <input id="num-people" type="number" min="1" step="1" placeholder="0" required>
+        <input id="num-people" type="number" min="1" step="1" placeholder="1" required>
       </div>
 
       <div class="calculations">
