--- a/Frontend Mentor/Calculator App/index.html
+++ b/Frontend Mentor/Calculator App/index.html
@@ -4,23 +4,52 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="stylesheet" type="text.css" href="style.css">
   
-  <title>Frontend Mentor | Calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Frontend Mentor | Calculator App</title>
 </head>
 <body>
+  
+  <header>
+    <div class="logo">calc</div>
+    <input class="theme-selector" list="themes" type="range" min="1" max="3" value="1" step="1">
+    <datalist id="themes">
+      <option value="1" label="1"></option>
+      <option value="2" label="2"></option>
+      <option value="3" label="3"></option>
+    </datalist>
+  </header>
+
+  <main>
+    <div id="displayBox">0</div>
+    <div id="key-container">
+      <div class="key primary-color">7</div>
+      <div class="key primary-color">8</div>
+      <div class="key primary-color">9</div>
+      <div class="key secondary-color">DEL</div>
+      <div class="key primary-color">4</div>
+      <div class="key primary-color">5</div>
+      <div class="key primary-color">6</div>
+      <div class="key primary-color">+</div>
+      <div class="key primary-color">1</div>
+      <div class="key primary-color">2</div>
+      <div class="key primary-color">3</div>
+      <div class="key primary-color">-</div>
+      <div class="key primary-color">.</div>
+      <div class="key primary-color">0</div>
+      <div class="key primary-color">/</div>
+      <div class="key primary-color">x</div>
+      <div class="key secondary-color reset">RESET</div>
+      <div class="key equals accent-color">=</div>
+    </div>
+  </main>
 
 
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/alexvalpeter">Alexandria Peterson</a>.
   </div>
 </body>
 </html>
