Keys grid layout

--- a/Frontend Mentor/Calculator App/index.html
+++ b/Frontend Mentor/Calculator App/index.html
@@ -24,26 +24,26 @@
   </header>
 
   <main>
-    <div id="display-box theme-1">0</div>
+    <div id="display-box" class="theme-1">0</div>
     <div id="keys-container">
-      <button class="key primary-color">7</button>
-      <button class="key primary-color">8</button>
-      <button class="key primary-color">9</button>
-      <button class="key secondary-color">DEL</button>
-      <button class="key primary-color">4</button>
-      <button class="key primary-color">5</button>
-      <button class="key primary-color">6</button>
-      <button class="key primary-color">+</button>
-      <button class="key primary-color">1</button>
-      <button class="key primary-color">2</button>
-      <button class="key primary-color">3</button>
-      <button class="key primary-color">-</button>
-      <button class="key primary-color">.</button>
-      <button class="key primary-color">0</button>
-      <button class="key primary-color">/</button>
-      <button class="key primary-color">x</button>
-      <button class="key secondary-color reset">RESET</button>
-      <button class="key equals accent-color">=</button>
+        <button class="key primary-color">7</button>
+        <button class="key primary-color">8</button>
+        <button class="key primary-color">9</button>
+        <button class="key secondary-color">DEL</button>
+        <button class="key primary-color">4</button>
+        <button class="key primary-color">5</button>
+        <button class="key primary-color">6</button>
+        <button class="key primary-color">+</button>
+        <button class="key primary-color">1</button>
+        <button class="key primary-color">2</button>
+        <button class="key primary-color">3</button>
+        <button class="key primary-color">-</button>
+        <button class="key primary-color">.</button>
+        <button class="key primary-color">0</button>
+        <button class="key primary-color">/</button>
+        <button class="key primary-color">x</button>
+        <button class="key secondary-color reset">RESET</button>
+        <button class="key equals accent-color">=</button>
     </div>
   </main>
 
