--- a/Frontend Mentor/Calculator App/index.html
+++ b/Frontend Mentor/Calculator App/index.html
@@ -25,25 +25,25 @@
 
   <main>
     <div id="display-box" class="theme-1">0</div>
-    <div id="keys-container">
-        <button class="key primary-color">7</button>
-        <button class="key primary-color">8</button>
-        <button class="key primary-color">9</button>
-        <button class="key secondary-color">DEL</button>
-        <button class="key primary-color">4</button>
-        <button class="key primary-color">5</button>
-        <button class="key primary-color">6</button>
-        <button class="key primary-color">+</button>
-        <button class="key primary-color">1</button>
-        <button class="key primary-color">2</button>
-        <button class="key primary-color">3</button>
-        <button class="key primary-color">-</button>
-        <button class="key primary-color">.</button>
-        <button class="key primary-color">0</button>
-        <button class="key primary-color">/</button>
-        <button class="key primary-color">x</button>
-        <button class="key secondary-color reset">RESET</button>
-        <button class="key equals accent-color">=</button>
+    <div id="keys-container" class="theme-1">
+        <button class="key theme-1">7</button>
+        <button class="key theme-1">8</button>
+        <button class="key theme-1">9</button>
+        <button class="key del theme-1">DEL</button>
+        <button class="key theme-1">4</button>
+        <button class="key theme-1">5</button>
+        <button class="key theme-1">6</button>
+        <button class="key theme-1">+</button>
+        <button class="key theme-1">1</button>
+        <button class="key theme-1">2</button>
+        <button class="key theme-1">3</button>
+        <button class="key theme-1">-</button>
+        <button class="key theme-1">.</button>
+        <button class="key theme-1">0</button>
+        <button class="key theme-1">/</button>
+        <button class="key theme-1">x</button>
+        <button class="key reset theme-1">RESET</button>
+        <button class="key equals theme-1">=</button>
     </div>
   </main>
 
