--- a/Frontend Mentor/Calculator App/index.html
+++ b/Frontend Mentor/Calculator App/index.html
@@ -11,41 +11,44 @@
 </head>
 <body class="theme-1">
   
-  <header>
-    <div class="logo theme-1">calc</div>
-    <div class="toggle-label">THEME</div>
-    <div class="toggle-options">1 2 3</div>
-    <input class="theme-toggle" list="themes" type="range" min="1" max="3" value="1" step="1">
-    <datalist id="themes">
-      <option value="1"></option>
-      <option value="2"></option>
-      <option value="3"></option>
-    </datalist>
-  </header>
-
-  <main>
-    <div id="display-box" class="theme-1">0</div>
-    <div id="keys-container" class="theme-1">
-        <button class="key theme-1">7</button>
-        <button class="key theme-1">8</button>
-        <button class="key theme-1">9</button>
-        <button class="key del theme-1">DEL</button>
-        <button class="key theme-1">4</button>
-        <button class="key theme-1">5</button>
-        <button class="key theme-1">6</button>
-        <button class="key theme-1">+</button>
-        <button class="key theme-1">1</button>
-        <button class="key theme-1">2</button>
-        <button class="key theme-1">3</button>
-        <button class="key theme-1">-</button>
-        <button class="key theme-1">.</button>
-        <button class="key theme-1">0</button>
-        <button class="key theme-1">/</button>
-        <button class="key theme-1">x</button>
-        <button class="key reset theme-1">RESET</button>
-        <button class="key equals theme-1">=</button>
-    </div>
-  </main>
+  <div id="content-container">
+    <header>
+      <div class="logo theme-1">calc</div>
+      <div class="toggle-label">THEME</div>
+      <div class="toggle-options">1 2 3</div>
+      <input class="theme-toggle" list="themes" type="range" min="1" max="3" value="1" step="1">
+      <datalist id="themes">
+        <option value="1"></option>
+        <option value="2"></option>
+        <option value="3"></option>
+      </datalist>
+    </header>
+    <main>
+      <div id="display-box" class="theme-1">0</div>
+      <div class="keys-container">
+        <div id="keypad" class="theme-1">
+            <button class="key theme-1">7</button>
+            <button class="key theme-1">8</button>
+            <button class="key theme-1">9</button>
+            <button class="key del theme-1">DEL</button>
+            <button class="key theme-1">4</button>
+            <button class="key theme-1">5</button>
+            <button class="key theme-1">6</button>
+            <button class="key theme-1">+</button>
+            <button class="key theme-1">1</button>
+            <button class="key theme-1">2</button>
+            <button class="key theme-1">3</button>
+            <button class="key theme-1">-</button>
+            <button class="key theme-1">.</button>
+            <button class="key theme-1">0</button>
+            <button class="key theme-1">/</button>
+            <button class="key theme-1">x</button>
+            <button class="key reset theme-1">RESET</button>
+            <button class="key equals theme-1">=</button>
+        </div>
+      </div>
+    </main>
+  </div>
 
 
   
