--- a/Frontend Mentor/Calculator App/index.html
+++ b/Frontend Mentor/Calculator App/index.html
@@ -16,10 +16,10 @@
       <div class="logo theme-1">calc</div>
 
       <div class="theme-selector">
-        <div class="toggle-label">THEME</div>
+        <div class="toggle-label theme-1">THEME</div>
 
         <div class="toggle-container">
-          <div class="toggle-options-label">
+          <div class="toggle-options-label theme-1">
             <p>1</p>
             <p>2</p>
             <p>3</p>
