--- a/Frontend Mentor/Calculator App/index.html
+++ b/Frontend Mentor/Calculator App/index.html
@@ -13,13 +13,13 @@
   
   <div id="content-container">
     <header>
-      <div class="logo theme-1">calc</div>
+      <div class="logo">calc</div>
 
       <div class="theme-selector">
-        <div class="toggle-label theme-1">THEME</div>
+        <div class="toggle-label">THEME</div>
 
         <div class="toggle-container">
-          <div class="toggle-options-label theme-1">
+          <div class="toggle-options-label">
             <p>1</p>
             <p>2</p>
             <p>3</p>
@@ -36,34 +36,33 @@
 
     </header>
     <main>
-      <div id="display-box" class="theme-1">0</div>
+      <div id="display-box">0</div>
       <div class="keys-container">
-        <div id="keypad" class="theme-1">
-            <button class="key theme-1">7</button>
-            <button class="key theme-1">8</button>
-            <button class="key theme-1">9</button>
-            <button class="key del theme-1">DEL</button>
-            <button class="key theme-1">4</button>
-            <button class="key theme-1">5</button>
-            <button class="key theme-1">6</button>
-            <button class="key theme-1">+</button>
-            <button class="key theme-1">1</button>
-            <button class="key theme-1">2</button>
-            <button class="key theme-1">3</button>
-            <button class="key theme-1">-</button>
-            <button class="key theme-1">.</button>
-            <button class="key theme-1">0</button>
-            <button class="key theme-1">/</button>
-            <button class="key theme-1">x</button>
-            <button class="key reset theme-1">RESET</button>
-            <button class="key equals theme-1">=</button>
+        <div id="keypad">
+            <button class="key">7</button>
+            <button class="key">8</button>
+            <button class="key">9</button>
+            <button class="key del">DEL</button>
+            <button class="key">4</button>
+            <button class="key">5</button>
+            <button class="key">6</button>
+            <button class="key">+</button>
+            <button class="key">1</button>
+            <button class="key">2</button>
+            <button class="key">3</button>
+            <button class="key">-</button>
+            <button class="key">.</button>
+            <button class="key">0</button>
+            <button class="key">/</button>
+            <button class="key">x</button>
+            <button class="key reset">RESET</button>
+            <button class="key equals">=</button>
         </div>
       </div>
     </main>
   </div>
 
 
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/alexvalpeter">Alexandria Peterson</a>.
