--- a/Frontend Mentor/Calculator App/index.html
+++ b/Frontend Mentor/Calculator App/index.html
@@ -67,5 +67,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/alexvalpeter">Alexandria Peterson</a>.
   </div>
+
+  <script src="app.js"></script>
 </body>
 </html>
