--- a/Frontend Mentor/Calculator App/index.html
+++ b/Frontend Mentor/Calculator App/index.html
@@ -39,22 +39,22 @@
       <div id="display-box">0</div>
       <div class="keys-container">
         <div id="keypad">
-            <button class="key">7</button>
-            <button class="key">8</button>
-            <button class="key">9</button>
+            <button class="key num">7</button>
+            <button class="key num">8</button>
+            <button class="key num">9</button>
             <button class="key del">DEL</button>
-            <button class="key">4</button>
-            <button class="key">5</button>
-            <button class="key">6</button>
-            <button class="key">+</button>
-            <button class="key">1</button>
-            <button class="key">2</button>
-            <button class="key">3</button>
-            <button class="key">-</button>
-            <button class="key">.</button>
-            <button class="key">0</button>
-            <button class="key">/</button>
-            <button class="key">x</button>
+            <button class="key num">4</button>
+            <button class="key num">5</button>
+            <button class="key num">6</button>
+            <button class="key add">+</button>
+            <button class="key num">1</button>
+            <button class="key num">2</button>
+            <button class="key num">3</button>
+            <button class="key subtract">-</button>
+            <button class="key decimal">.</button>
+            <button class="key num">0</button>
+            <button class="key divide">/</button>
+            <button class="key multiple">x</button>
             <button class="key reset">RESET</button>
             <button class="key equals">=</button>
         </div>
