Rename keypad classes

--- a/Frontend Mentor/Calculator App/index.html
+++ b/Frontend Mentor/Calculator App/index.html
@@ -54,7 +54,7 @@
             <button class="key decimal">.</button>
             <button class="key num">0</button>
             <button class="key divide">/</button>
-            <button class="key multiple">x</button>
+            <button class="key multiply">x</button>
             <button class="key reset">RESET</button>
             <button class="key equals">=</button>
         </div>
