Update classes for operator buttons

--- a/Frontend Mentor/Calculator App/index.html
+++ b/Frontend Mentor/Calculator App/index.html
@@ -46,15 +46,15 @@
             <button class="key num">4</button>
             <button class="key num">5</button>
             <button class="key num">6</button>
-            <button class="key add">+</button>
+            <button class="key operator add">+</button>
             <button class="key num">1</button>
             <button class="key num">2</button>
             <button class="key num">3</button>
-            <button class="key subtract">-</button>
+            <button class="key operator subtract">-</button>
             <button class="key decimal">.</button>
             <button class="key num">0</button>
-            <button class="key divide">/</button>
-            <button class="key multiply">x</button>
+            <button class="key operator divide">/</button>
+            <button class="key operator multiply">x</button>
             <button class="key reset">RESET</button>
             <button class="key equals">=</button>
         </div>
