--- a/Frontend Mentor/Calculator App/index.html
+++ b/Frontend Mentor/Calculator App/index.html
@@ -24,7 +24,7 @@
             <p>2</p>
             <p>3</p>
           </div>
-          <input class="theme-toggle" id="theme-toggle" list="themes" type="range" min="1" max="3" value="1" step="1">
+          <input class="theme-toggle" id="theme-toggle" list="themes" type="range" min="1" max="3" value="1" step="1" aria-label="Visual Theme Toggle">
         </div>
 
         <datalist id="themes">
