--- a/Frontend Mentor/Results Summary/index.html
+++ b/Frontend Mentor/Results Summary/index.html
@@ -14,8 +14,10 @@
   <div id="card-container">
     <div id="overall-result">
       <div class="card-heading">Your Result</div>
-      <div id="overall-score-num">76</div>
-      <div id="total">of 100</div>
+      <div class="total-score">
+        <div id="overall-score-num">76</div>
+        <div id="total">of 100</div>
+      </div>
 
       <div class="score-desc">Great</div>
       <div class="percentile-msg">You scored higher than 65% of the people who have taken these tests.</div>
