--- a/Frontend Mentor/Results Summary/index.html
+++ b/Frontend Mentor/Results Summary/index.html
@@ -26,25 +26,45 @@
     <div id="summary">
       <div class="card-heading">Summary</div>
 
-      <div class="score-category">
-        <div class="category-name">Reaction</div>
-        <div class="score">80 / 100</div>
-      </div>
+      <div id="cateogories-container">
 
-      <div class="score-category">
-        <div class="category-name">Memory</div>
-        <div class="score">92 / 100</div>
-      </div>
+        <div class="score-category category-1">
+          <img src="./img/icon-reaction.svg">
+          <div class="category-name">Reaction</div>
+          <div class="score">
+            <div class="numerator">80</div>
+            <div class="denominator">/100</div>
+          </div>
+        </div>
 
-      <div class="score-category">
-        <div class="category-name">Verbal</div>
-        <div class="score">61 / 100</div>
-      </div>
+        <div class="score-category category-2">
+          <img src="./img/icon-memory.svg">
+          <div class="category-name">Memory</div>
+          <div class="score">
+            <div class="numerator">92</div>
+            <div class="denominator">/ 100</div>
+          </div>  
+        </div>
 
-      <div class="score-category">
-        <div class="category-name">Visual</div>
-        <div class="score">72 / 100</div>
-      </div>
+        <div class="score-category category-3">
+          <img src="./img/icon-verbal.svg">
+          <div class="category-name">Verbal</div>
+          <div class="score">
+            <div class="numerator">61</div>
+            <div class="denominator">/ 100</div>
+          </div>  
+        </div>
+
+        <div class="score-category category-4">
+          <img src="./img/icon-visual.svg">
+          <div class="category-name">Visual</div>
+          <div class="score">
+            <div class="numerator">72</div> 
+            <div class="denominator">/ 100</div>
+          </div>  
+        </div>
+
+      </div>  
 
       <button class="continue">Continue</button>
     </div>
