Implement JS to get category names, scores, and icons from JSON

--- a/Frontend Mentor/Results Summary/index.html
+++ b/Frontend Mentor/Results Summary/index.html
@@ -29,37 +29,37 @@
       <div id="cateogories-container">
 
         <div class="score-category category-1">
-          <img src="./img/icon-reaction.svg">
+          <img class="icon" src="">
           <div class="category-name">Reaction</div>
           <div class="score">
-            <div class="numerator">80</div>
+            <div class="numerator"></div>
             <div class="denominator">/100</div>
           </div>
         </div>
 
         <div class="score-category category-2">
-          <img src="./img/icon-memory.svg">
-          <div class="category-name">Memory</div>
+          <img class="icon" src="">
+          <div class="category-name"></div>
           <div class="score">
-            <div class="numerator">92</div>
+            <div class="numerator"></div>
             <div class="denominator">/ 100</div>
           </div>  
         </div>
 
         <div class="score-category category-3">
-          <img src="./img/icon-verbal.svg">
-          <div class="category-name">Verbal</div>
+          <img class="icon" src="">
+          <div class="category-name"></div>
           <div class="score">
-            <div class="numerator">61</div>
+            <div class="numerator"></div>
             <div class="denominator">/ 100</div>
           </div>  
         </div>
 
         <div class="score-category category-4">
-          <img src="./img/icon-visual.svg">
-          <div class="category-name">Visual</div>
+          <img class="icon" src="">
+          <div class="category-name"></div>
           <div class="score">
-            <div class="numerator">72</div> 
+            <div class="numerator"></div> 
             <div class="denominator">/ 100</div>
           </div>  
         </div>
