Add mobile rating state styles

--- a/Frontend Mentor/Interactive Rating Component/index.html
+++ b/Frontend Mentor/Interactive Rating Component/index.html
@@ -16,8 +16,8 @@
   <div id="card-container">
 
   <!-- Rating state start -->
-    <div id="rating-state">
-      <img class="star-icon" src=".img/icon-star.svg" alt="Star Icon">
+    <div id="rating-state" class="active">
+      <img class="star-icon" src="./img/icon-star.svg" alt="Star Icon">
 
       <div class="card-heading">How did we do?</div>
 
@@ -26,15 +26,15 @@
       <p>Please let us know how we did with your support request. All feedback is appreciated 
       to help us improve our offering!</p>
       <div class="ratings-container">
-        <button class="rating">1</button>
-        <button class="rating">2</button>
-        <button class="rating">3</button>
-        <button class="rating">4</button>
-        <button class="rating">5</button>
+        <button class="rating-num">1</button>
+        <button class="rating-num">2</button>
+        <button class="rating-num">3</button>
+        <button class="rating-num">4</button>
+        <button class="rating-num">5</button>
       </div>  
 
 
-      <button class="submit-btn">Submit</button>
+      <button type="submit">Submit</button>
     </div>
 
   <!-- Rating state end -->
