Thankyou state mobile styles

--- a/Frontend Mentor/Interactive Rating Component/index.html
+++ b/Frontend Mentor/Interactive Rating Component/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="style.css">
   
   <title>Frontend Mentor | Interactive Rating Component</title>
@@ -16,7 +16,7 @@
   <div id="card-container">
 
   <!-- Rating state start -->
-    <div id="rating-state" class="active">
+    <div id="rating-state">
       <img class="star-icon" src="./img/icon-star.svg" alt="Star Icon">
 
       <div class="card-heading">How did we do?</div>
@@ -41,11 +41,11 @@
 
   <!-- Thank you state start -->
 
-    <div id="thankyou-state">
+    <div id="thankyou-state" class="active">
 
       <img class="thankyou-illustration" src="./img/illustration-thank-you.svg" alt="Thank You Illustration">
 
-      <div class="selection-text">You selected <span></span>out of 5</div>
+      <div class="selection-text">You selected <span>4</span> out of 5</div>
 
       <div class="card-heading">Thank you!</div>
 
