--- a/Frontend Mentor/Interactive Rating Component/index.html
+++ b/Frontend Mentor/Interactive Rating Component/index.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-
+  
   <div id="card-container">
 
   <!-- Rating state start -->
-    <div id="rating-state">
+    <div id="rating-state" class="active">
       <img class="star-icon" src="./img/icon-star.svg" alt="Star Icon">
 
       <div class="card-heading">How did we do?</div>
@@ -25,6 +25,7 @@
 
       <p>Please let us know how we did with your support request. All feedback is appreciated 
       to help us improve our offering!</p>
+      <!--
       <div class="ratings-container">
         <button class="rating-num">1</button>
         <button class="rating-num">2</button>
@@ -35,13 +36,41 @@
 
 
       <button type="submit">Submit</button>
+      --> 
+
+      <form name="ratings" action="" id="rating-form">
+        <div class="ratings-container">
+          <div class="rating-option">
+            <input type="radio" name="rating" id="1" value="1">
+            <label for="1">1</label>
+          </div>
+          <div class="rating-option">
+            <input type="radio" name="rating" id="2" value="2">
+            <label for="2">2</label>
+          </div>
+          <div class="rating-option">
+            <input type="radio" name="rating" id="3" value="3">
+            <label for="3">3</label>
+          </div>
+          <div class="rating-option">
+            <input type="radio" name="rating" id="4" value="4">
+            <label for="4">4</label>
+          </div>
+          <div class="rating-option">
+            <input type="radio" name="rating" id="5" value="5">
+            <label for="5">5</label>
+          </div>
+        </div>
+        <input type="submit" value="Submit">
+        
+      </form>
     </div>
 
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
 
-    <div id="thankyou-state" class="active">
+    <div id="thankyou-state">
 
       <img class="thankyou-illustration" src="./img/illustration-thank-you.svg" alt="Thank You Illustration">
 
