--- a/Frontend Mentor/Intro Component/index.html
+++ b/Frontend Mentor/Intro Component/index.html
@@ -10,22 +10,32 @@
   
 </head>
 <body>
+  <main>
+    <div id="hero">
+      <h1>Learn to code by watching others</h1>
 
-  Learn to code by watching others
+      <p class="blurb">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+      but understanding how developers think is invaluable.</p>
+    </div>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+    <div class="cta">Try it free 7 days then $20/mo. thereafter</div>
+    <div id="signup">
+      <form name="signup-form" id="signup-form">
+        <input type="text" id="firstname" name="firstname" placeholder="First Name">
+        <label for="firstname">First Name</label>
+        <input type="text" id="lastname" name="lastname" placeholder=" Last Name">
+        <label for="lastname">Last Name</label>
+        <input type="email" id="email" name="email" placeholder="Email Address">
+        <label for="email">Email</label>
+        <input type="password" id="password" name="password" placeholder="Password">
+        <label for="password">Password</label>
 
-  Try it free 7 days then $20/mo. thereafter
+        <input type="submit" value="Claim your free trial">
+      </form>
 
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
+      <div class="TS-agreement">By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></div>
+    </div>
+  </main>
   
   <footer>
     <p class="attribution">
