--- a/Frontend Mentor/Intro Component/index.html
+++ b/Frontend Mentor/Intro Component/index.html
@@ -22,13 +22,16 @@
     <div class="cta"><span>Try it free 7 days</span> then <br>$20/mo. thereafter</div>
     <div id="signup">
       <form name="signup-form" id="signup-form">
-        <input type="text" id="firstname" name="firstname" placeholder="First Name" class="input-field">
+        <input type="text" required id="firstname" name="firstname" placeholder="First Name" >
         <label for="firstname">First Name</label>
-        <input type="text" id="lastname" name="lastname" placeholder=" Last Name" class="input-field">
+
+        <input type="text" required id="lastname" name="lastname" placeholder=" Last Name" class="input-field">
         <label for="lastname">Last Name</label>
-        <input type="email" id="email" name="email" placeholder="Email Address" class="input-field">
+
+        <input type="email" required id="email" name="email" placeholder="Email Address" class="input-field">
         <label for="email">Email</label>
-        <input type="password" id="password" name="password" placeholder="Password" class="input-field">
+      
+        <input type="password" required id="password" name="password" placeholder="Password" class="input-field">
         <label for="password">Password</label>
 
         <input type="submit" value="Claim your free trial">
@@ -44,5 +47,7 @@
       Coded by <a href="https://github.com/alexvalpeter">Alex Peterson</a>.
     </p>
   </footer>
+
+  <script src="app.js"></script>
 </body>
 </html>
