Add misc mobile form styles

--- a/Frontend Mentor/Intro Component/index.html
+++ b/Frontend Mentor/Intro Component/index.html
@@ -19,25 +19,25 @@
       but understanding how developers think is invaluable.</p>
     </div>
 
-    <div class="cta"><span>Try it free 7 days</span> then <br>$20/mo. thereafter</div>
+    <div class="cta"><span>Try it free 7 days</span> then $20/mo. thereafter</div>
     <div id="signup">
       <form name="signup-form" id="signup-form">
-        <input type="text" required id="firstname" name="firstname" placeholder="First Name" >
+        <input type="text" id="firstname" name="firstname" placeholder="First Name" required >
         <label for="firstname">First Name</label>
 
-        <input type="text" required id="lastname" name="lastname" placeholder=" Last Name" class="input-field">
+        <input type="text" id="lastname" name="lastname" placeholder=" Last Name" required >
         <label for="lastname">Last Name</label>
 
-        <input type="email" required id="email" name="email" placeholder="Email Address" class="input-field">
+        <input type="email" id="email" name="email" placeholder="Email Address" required >
         <label for="email">Email</label>
       
-        <input type="password" required id="password" name="password" placeholder="Password" class="input-field">
+        <input type="password" id="password" name="password" placeholder="Password" required >
         <label for="password">Password</label>
 
         <input type="submit" value="Claim your free trial">
       </form>
 
-      <div class="TS-agreement">By clicking the button, you are agreeing to<br> our <a href="#">Terms and Services</a></div>
+      <div class="TS-agreement">By clicking the button, you are agreeing to our <a href="#">Terms of Service</a></div>
     </div>
   </main>
   
